samples/_failures_safe/1761138863_8abaa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28fbf91d.c: In function ‘main’:
./samples/SAFE/__tmp_28fbf91d.c:174:5: error: expected expression at end of input
  174 |     if (fgets(input, sizeof
      |     ^~
./samples/SAFE/__tmp_28fbf91d.c:174:9: error: too few arguments to function ‘fgets’
  174 |     if (fgets(input, sizeof
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_28fbf91d.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_28fbf91d.c:174:5: error: expected declaration or statement at end of input
  174 |     if (fgets(input, sizeof
      |     ^~
